Add: 添加其他扩展文件（manifest, settings, style, docs）

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "optional": [],
   "js": "index.js",
   "css": "style.css",
-  "author": "YIWANG-sketch",
+  "author": "Custom Extension",
   "version": "1.0.0",
   "homePage": "https://github.com/YIWANG-sketch/SillyTavern-Fix-Setvar-Macro"
 }
